Upgrade to Langchain4j 1.0.0 and Langchain4j MCP 1.0.0-beta5